--- a/01-feedback-app/src/index.css
+++ b/01-feedback-app/src/index.css
@@ -187,6 +187,7 @@ input:focus {
   padding-top: 10px;
   text-align: center;
   color: rebeccapurple;
+  font-weight: bold;
 }
 
 /* FIX: Remove position: absolute to keep about icon at the bottom of the
